--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,5 +72,5 @@ img {
 footer {
     background: rgb(140,160,150);
     color: rgb(200,245,215);
-    font-weight: lighter
+    font-weight: lighter;
 }
